@@ -32,10 +32,7 @@ import org.jackhuang.hmcl.ui.FXUtils;
 import org.jackhuang.hmcl.util.CacheRepository;
 import org.jackhuang.hmcl.util.Lang;
 import org.jackhuang.hmcl.util.io.FileUtils;
-import org.jackhuang.hmcl.util.platform.Architecture;
-import org.jackhuang.hmcl.util.platform.OperatingSystem;
-import org.jackhuang.hmcl.util.platform.Platform;
-import org.jackhuang.hmcl.util.platform.UnsupportedPlatformException;
+import org.jackhuang.hmcl.util.platform.*;
 import org.jackhuang.hmcl.util.platform.windows.WinReg;
 import org.jackhuang.hmcl.util.versioning.GameVersionNumber;
 import org.jetbrains.annotations.Nullable;
@@ -59,6 +56,7 @@ public final class JavaManager {
     }
 
     public static final HMCLJavaRepository REPOSITORY = new HMCLJavaRepository(Metadata.HMCL_GLOBAL_DIRECTORY.resolve("java"));
+    public static final HMCLJavaRepository LOCAL_REPOSITORY = new HMCLJavaRepository(Metadata.HMCL_CURRENT_DIRECTORY.resolve("java"));
 
     public static String getMojangJavaPlatform(Platform platform) {
         if (platform.getOperatingSystem() == OperatingSystem.WINDOWS) {
@@ -162,7 +160,7 @@ public final class JavaManager {
             return javaRuntime;
         }
 
-        JavaInfo info = JavaInfo.fromExecutable(executable);
+        JavaInfo info = JavaInfoUtils.fromExecutable(executable, true);
         return JavaRuntime.of(executable, info, false);
     }
 
@@ -414,8 +412,15 @@ public final class JavaManager {
         if (System.getenv("PATH") != null) {
             String[] paths = System.getenv("PATH").split(File.pathSeparator);
             for (String path : paths) {
+                // https://github.com/HMCL-dev/HMCL/issues/4079
+                // https://github.com/Meloong-Git/PCL/issues/4261
+                if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS && path.toLowerCase(Locale.ROOT)
+                        .contains("\\common files\\oracle\\java\\")) {
+                    continue;
+                }
+
                 try {
-                    tryAddJavaExecutable(javaRuntimes, Paths.get(path, OperatingSystem.CURRENT_OS.getJavaExecutable()));
+                    tryAddJavaExecutable(javaRuntimes, Path.of(path, OperatingSystem.CURRENT_OS.getJavaExecutable()));
                 } catch (InvalidPathException ignored) {
                 }
             }
@@ -483,12 +488,15 @@ public final class JavaManager {
             try {
                 info = JavaInfo.fromReleaseFile(releaseFile);
             } catch (IOException e) {
-                try {
-                    info = JavaInfo.fromExecutable(executable, false);
-                } catch (IOException e2) {
-                    e2.addSuppressed(e);
-                    LOG.warning("Failed to lookup Java executable at " + executable, e2);
-                }
+                LOG.warning("Failed to read release file " + releaseFile, e);
+            }
+        }
+
+        if (info == null) {
+            try {
+                info = JavaInfoUtils.fromExecutable(executable, false);
+            } catch (IOException e) {
+                LOG.warning("Failed to lookup Java executable at " + executable, e);
             }
         }
 
@@ -509,7 +517,7 @@ public final class JavaManager {
 
         JavaInfo info = null;
         try {
-            info = JavaInfo.fromExecutable(executable);
+            info = JavaInfoUtils.fromExecutable(executable, true);
         } catch (IOException e) {
             LOG.warning("Failed to lookup Java executable at " + executable, e);
         }
@@ -562,6 +570,10 @@ public final class JavaManager {
 
     private static void searchAllJavaInRepository(Map<Path, JavaRuntime> javaRuntimes, Platform platform) {
         for (JavaRuntime java : REPOSITORY.getAllJava(platform)) {
+            javaRuntimes.put(java.getBinary(), java);
+        }
+
+        for (JavaRuntime java : LOCAL_REPOSITORY.getAllJava(platform)) {
             javaRuntimes.put(java.getBinary(), java);
         }
     }
